deploy: 65ff78903b831ff506a374c245ee19d11b76af5e

--- a/classmnx_1_1ArrayElementObject.html
+++ b/classmnx_1_1ArrayElementObject.html
@@ -129,8 +129,10 @@ $(document).ready(function(){initNavTree('classmnx_1_1ArrayElementObject.html','
 <area href="classmnx_1_1score_1_1MultimeasureRest.html" title="Represents a multimeasure rest in a score." alt="mnx::score::MultimeasureRest" shape="rect" coords="195,896,380,920"/>
 <area href="classmnx_1_1score_1_1Page.html" title="Represents a page in a score." alt="mnx::score::Page" shape="rect" coords="195,952,380,976"/>
 <area href="classmnx_1_1score_1_1System.html" title="Represents a system on a page in a score." alt="mnx::score::System" shape="rect" coords="195,1008,380,1032"/>
-<area href="classmnx_1_1sequence_1_1Note.html" title="Represents a single note (i.e., within a chord) within a musical event within a sequence." alt="mnx::sequence::Note" shape="rect" coords="195,1064,380,1088"/>
-<area href="classmnx_1_1sequence_1_1Rest.html" title="Represents a rest within a musical event within a sequence." alt="mnx::sequence::Rest" shape="rect" coords="195,1120,380,1144"/>
+<area href="classmnx_1_1sequence_1_1EventLyricLine.html" title="Contains information about a lyric syllable from one lyric line on a note." alt="mnx::sequence::EventLyricLine" shape="rect" coords="195,1064,380,1088"/>
+<area href="classmnx_1_1sequence_1_1Note.html" title="Represents a single note (i.e., within a chord) within a musical event within a sequence." alt="mnx::sequence::Note" shape="rect" coords="195,1120,380,1144"/>
+<area href="classmnx_1_1sequence_1_1Rest.html" title="Represents a rest within a musical event within a sequence." alt="mnx::sequence::Rest" shape="rect" coords="195,1176,380,1200"/>
+<area href="classmnx_1_1sequence_1_1Slur.html" title="Contains information about a tie on a note." alt="mnx::sequence::Slur" shape="rect" coords="195,1232,380,1256"/>
   </map>
 </div></div>
 <table class="memberdecls">
