--- a/classmnx_1_1Base.html
+++ b/classmnx_1_1Base.html
@@ -142,8 +142,9 @@ $(document).ready(function(){initNavTree('classmnx_1_1Base.html',''); initResiza
 <area href="classmnx_1_1part_1_1Clef.html" title="Represents a visible clef in the measure." alt="mnx::part::Clef" shape="rect" coords="908,1232,1125,1256"/>
 <area href="classmnx_1_1sequence_1_1AccidentalDisplay.html" title="Represents an explicit directive to show or hide an accidental." alt="mnx::sequence::AccidentalDisplay" shape="rect" coords="908,1288,1125,1312"/>
 <area href="classmnx_1_1sequence_1_1AccidentalEnclosure.html" title="Represents the enclosure on an accidental." alt="mnx::sequence::AccidentalEnclosure" shape="rect" coords="908,1344,1125,1368"/>
-<area href="classmnx_1_1sequence_1_1Pitch.html" title="Represents the pitch of a note." alt="mnx::sequence::Pitch" shape="rect" coords="908,1400,1125,1424"/>
-<area href="classmnx_1_1sequence_1_1Tie.html" title="Contains information about a tie on a note." alt="mnx::sequence::Tie" shape="rect" coords="908,1456,1125,1480"/>
+<area href="classmnx_1_1sequence_1_1EventLyrics.html" title="Contains information about the lyric syllables on the event." alt="mnx::sequence::EventLyrics" shape="rect" coords="908,1400,1125,1424"/>
+<area href="classmnx_1_1sequence_1_1Pitch.html" title="Represents the pitch of a note." alt="mnx::sequence::Pitch" shape="rect" coords="908,1456,1125,1480"/>
+<area href="classmnx_1_1sequence_1_1Tie.html" title="Contains information about a tie on a note." alt="mnx::sequence::Tie" shape="rect" coords="908,1512,1125,1536"/>
   </map>
 </div></div>
 <table class="memberdecls">
